# MoxC

./: CMakeLists.txt  README.md  c-cpp.yml  conanfile.txt
.github/workflows/: c-cpp.yml
cmake/: CompilerWarnings.cmake  Conan.cmake  FindClang.cmake
include/: Imock_gen.hpp  arg_parser.hpp  data_types.hpp  file_parser.hpp  gmock_mock_gen.hpp  trompeloeil_mock_gen.hpp
src/: CMakeLists.txt  arg_parser.cpp  file_parser.cpp  gmock_mock_gen.cpp  main.cpp  trompeloeil_mock_gen.cpp
tests/: CMakeLists.txt  c_api.h  client_c_api.cpp  client_c_api.hpp  tests-client-c-api.cpp  tests-gmock.cpp  tests-trompeloeil.cpp
tests/Gmock/: mock_c_api.cpp  mock_c_api.hpp
tests/gmock/: mock_c_api.cpp  mock_c_api.hpp
tests/trompeloeil/: mock_c_api.cpp  mock_c_api.h  mock_c_api.hpp  mock_c_api1.cpp
